# bayes_nn

./: README.md  hello.py  normal_bnn_architecture  pyproject.toml  setup.cfg
bayes_nn/: __init__.py  base.py  layers.py  losses.py  models.py  utils.py
examples/: sample_normal_bayes_nn.py  sample_poisson_bayes_nn.py
tests/: __init__.py  test_layers.py  test_losses.py  test_models.py  test_utils.py
