[metadata]
name = bayes_nn
version = 0.1.0
author = Yutaka Koga
author_email = yukoga@gmail.com
description = A simple Bayesian Neural Network library using PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yukoga/bayes_nn
license = Apache 2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.20.0
    pandas>=1.3.0
    matplotlib>=3.4.0
    torch>=1.9.0
    tqdm>=4.67.1

[options.packages.find]
where = .
exclude =
    tests*
    examples*

[options.extras_require]
dev =
    pytest>=6.0
